[package]
name = "my-package"
version = "0.1.0"
authors = ["Fabrizio Lazzaretti <fabrizio@lazzaretti.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mosquitto-client-wrapper = { path = "./mosquitto-client-wrapper" }
